--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@glimmer/tracking": "^1.0.4",
     "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
+    "curved-arrows": "^0.1.0",
     "d3": "^7.3.0",
     "ember-auto-import": "^2.2.4",
     "ember-cli": "~4.1.1",
